--- a/templates/d2tal/index.html
+++ b/templates/d2tal/index.html
@@ -123,7 +123,7 @@
                                     {% else %}
                                     <input type="checkbox" class="d-none" name="class" value="0">
                                     {% endif %}
-                                    <img src="http://www.bungie.net/common/destiny2_content/icons/e19db7ef99282a166ff9c650d5bafdc8.png" class="icon" title="Titan" width="24" height="24">
+                                    <img src="https://www.bungie.net/common/destiny2_content/icons/46a19ddd00d0f6ca822230943103b54a.png" class="icon" title="Titan" width="24" height="24">
                                 </a>
                                 <a href="javascript:void(0);" class="btn btn-outline-primary p-1" role="button" data-bs-toggle="button">
                                     {% if '1' in class %}
@@ -131,7 +131,7 @@
                                     {% else %}
                                     <input type="checkbox" class="d-none" name="class" value="1">
                                     {% endif %}
-                                    <img src="http://www.bungie.net/common/destiny2_content/icons/dc8dfdde34e25b92afb5403882c9983b.png" class="icon" title="Hunter" width="24" height="24">
+                                    <img src="https://www.bungie.net/common/destiny2_content/icons/05e32a388d9a65a0ef59b2193eee2db4.png" class="icon" title="Hunter" width="24" height="24">
                                 </a>
                                 <a href="javascript:void(0);" class="btn btn-outline-primary p-1" role="button" data-bs-toggle="button">
                                     {% if '2' in class %}
@@ -139,7 +139,7 @@
                                     {% else %}
                                     <input type="checkbox" class="d-none" name="class" value="2">
                                     {% endif %}
-                                    <img src="http://www.bungie.net/common/destiny2_content/icons/bc62282aea01969049a33d6c1ddffe2f.png" class="icon" title="Warlock" width="24" height="24">
+                                    <img src="https://www.bungie.net/common/destiny2_content/icons/e4006d9a8fe167bd7e83193d7601c89a.png" class="icon" title="Warlock" width="24" height="24">
                                 </a>
                             </td>
                         </tr>
@@ -193,32 +193,32 @@
                             <th scope="row">Stats</th>
                             <td>
                                 <div class="input-group">
-                                    <span class="input-group-text"><img src="http://www.bungie.net/common/destiny2_content/icons/e26e0e93a9daf4fdd21bf64eb9246340.png" class="icon" title="Mobility" width="25" height="25"></span>
+                                    <span class="input-group-text"><img src="https://www.bungie.net/common/destiny2_content/icons/e26e0e93a9daf4fdd21bf64eb9246340.png" class="icon" title="Mobility" width="25" height="25"></span>
                                     <input type="number" class="form-control" name="minMobility" placeholder="min" value="{{ minMobility }}">
                                     <input type="number" class="form-control" name="maxMobility" placeholder="max" value="{{ maxMobility }}">
                                 </div>
                                 <div class="input-group">
-                                    <span class="input-group-text"><img src="http://www.bungie.net/common/destiny2_content/icons/202ecc1c6febeb6b97dafc856e863140.png" class="icon" title="Resilience" width="25" height="25"></span>
+                                    <span class="input-group-text"><img src="https://www.bungie.net/common/destiny2_content/icons/202ecc1c6febeb6b97dafc856e863140.png" class="icon" title="Resilience" width="25" height="25"></span>
                                     <input type="number" class="form-control" name="minResilience" placeholder="min" value="{{ minResilience }}">
                                     <input type="number" class="form-control" name="maxResilience" placeholder="max" value="{{ maxResilience }}">
                                 </div>
                                 <div class="input-group">
-                                    <span class="input-group-text"><img src="http://www.bungie.net/common/destiny2_content/icons/128eee4ee7fc127851ab32eac6ca91cf.png" class="icon" title="Recovery" width="25" height="25"></span>
+                                    <span class="input-group-text"><img src="https://www.bungie.net/common/destiny2_content/icons/128eee4ee7fc127851ab32eac6ca91cf.png" class="icon" title="Recovery" width="25" height="25"></span>
                                     <input type="number" class="form-control" name="minRecovery" placeholder="min" value="{{ minRecovery }}">
                                     <input type="number" class="form-control" name="maxRecovery" placeholder="max" value="{{ maxRecovery }}">
                                 </div>
                                 <div class="input-group">
-                                    <span class="input-group-text"><img src="http://www.bungie.net/common/destiny2_content/icons/ca62128071dc254fe75891211b98b237.png" class="icon" title="Discipline" width="25" height="25"></span>
+                                    <span class="input-group-text"><img src="https://www.bungie.net/common/destiny2_content/icons/79be2d4adef6a19203f7385e5c63b45b.png" class="icon" title="Discipline" width="25" height="25"></span>
                                     <input type="number" class="form-control" name="minDiscipline" placeholder="min" value="{{ minDiscipline }}">
                                     <input type="number" class="form-control" name="maxDiscipline" placeholder="max" value="{{ maxDiscipline }}">
                                 </div>
                                 <div class="input-group">
-                                    <span class="input-group-text"><img src="http://www.bungie.net/common/destiny2_content/icons/59732534ce7060dba681d1ba84c055a6.png" class="icon" title="Intellect" width="25" height="25"></span>
+                                    <span class="input-group-text"><img src="https://www.bungie.net/common/destiny2_content/icons/d1c154469670e9a592c9d4cbdcae5764.png" class="icon" title="Intellect" width="25" height="25"></span>
                                     <input type="number" class="form-control" name="minIntellect" placeholder="min" value="{{ minIntellect }}">
                                     <input type="number" class="form-control" name="maxIntellect" placeholder="max" value="{{ maxIntellect }}">
                                 </div>
                                 <div class="input-group">
-                                    <span class="input-group-text"><img src="http://www.bungie.net/common/destiny2_content/icons/c7eefc8abbaa586eeab79e962a79d6ad.png" class="icon" title="Strength" width="25" height="25"></span>
+                                    <span class="input-group-text"><img src="https://www.bungie.net/common/destiny2_content/icons/ea5af04ccd6a3470a44fd7bb0f66e2f7.png" class="icon" title="Strength" width="25" height="25"></span>
                                     <input type="number" class="form-control" name="minStrength" placeholder="min" value="{{ minStrength }}">
                                     <input type="number" class="form-control" name="maxStrength" placeholder="max" value="{{ maxStrength }}">
                                 </div>
@@ -299,11 +299,11 @@
                     </td>
                     <td>
                         {% if salesitem.item_hash.class_type == 0 %}
-                        <img src="http://www.bungie.net/common/destiny2_content/icons/e19db7ef99282a166ff9c650d5bafdc8.png" class="icon" title="Titan" width="48" height="48">
+                        <img src="https://www.bungie.net/common/destiny2_content/icons/46a19ddd00d0f6ca822230943103b54a.png" class="icon" title="Titan" width="48" height="48">
                         {% elif salesitem.item_hash.class_type == 1 %}
-                        <img src="http://www.bungie.net/common/destiny2_content/icons/dc8dfdde34e25b92afb5403882c9983b.png" class="icon" title="Hunter" width="48" height="48">
+                        <img src="https://www.bungie.net/common/destiny2_content/icons/05e32a388d9a65a0ef59b2193eee2db4.png" class="icon" title="Hunter" width="48" height="48">
                         {% else %}
-                        <img src="http://www.bungie.net/common/destiny2_content/icons/bc62282aea01969049a33d6c1ddffe2f.png" class="icon" title="Warlock" width="48" height="48">
+                        <img src="https://www.bungie.net/common/destiny2_content/icons/e4006d9a8fe167bd7e83193d7601c89a.png" class="icon" title="Warlock" width="48" height="48">
                         {% endif %}
                     </td>
                     <td><img src="http://www.bungie.net{{ salesitem.vendor_hash.icon_url }}" title="{{ salesitem.vendor_hash.vendor_name }}" width="168" height="48"></td>
@@ -312,17 +312,17 @@
                         <table class="table table-borderless table-sm my-0">
                             <tbody class="text-primary">
                                 <tr>
-                                   <th class="p-0" style="width: 5.55%;"><img src="http://www.bungie.net/common/destiny2_content/icons/e26e0e93a9daf4fdd21bf64eb9246340.png" class="icon" title="Mobility" width="24" height="24"></th>
+                                   <th class="p-0" style="width: 5.55%;"><img src="https://www.bungie.net/common/destiny2_content/icons/e26e0e93a9daf4fdd21bf64eb9246340.png" class="icon" title="Mobility" width="24" height="24"></th>
                                    <td class="p-0" style="width: 11.1%;">{{ salesitem.mobility }}</td>
-                                   <th class="p-0" style="width: 5.55%;"><img src="http://www.bungie.net/common/destiny2_content/icons/202ecc1c6febeb6b97dafc856e863140.png" class="icon" title="Resilience" width="24" height="24"></th>
+                                   <th class="p-0" style="width: 5.55%;"><img src="https://www.bungie.net/common/destiny2_content/icons/202ecc1c6febeb6b97dafc856e863140.png" class="icon" title="Resilience" width="24" height="24"></th>
                                    <td class="p-0" style="width: 11.1%;">{{ salesitem.resilience }}</td>
-                                   <th class="p-0" style="width: 5.55%;"><img src="http://www.bungie.net/common/destiny2_content/icons/128eee4ee7fc127851ab32eac6ca91cf.png" class="icon" title="Recovery" width="24" height="24"></th>
+                                   <th class="p-0" style="width: 5.55%;"><img src="https://www.bungie.net/common/destiny2_content/icons/128eee4ee7fc127851ab32eac6ca91cf.png" class="icon" title="Recovery" width="24" height="24"></th>
                                    <td class="p-0" style="width: 11.1%;">{{ salesitem.recovery }}</td>
-                                   <th class="p-0" style="width: 5.55%;"><img src="http://www.bungie.net/common/destiny2_content/icons/ca62128071dc254fe75891211b98b237.png" class="icon" title="Discipline" width="24" height="24"></th>
+                                   <th class="p-0" style="width: 5.55%;"><img src="https://www.bungie.net/common/destiny2_content/icons/79be2d4adef6a19203f7385e5c63b45b.png" class="icon" title="Discipline" width="24" height="24"></th>
                                    <td class="p-0" style="width: 11.1%;">{{ salesitem.discipline }}</td>
-                                   <th class="p-0" style="width: 5.55%;"><img src="http://www.bungie.net/common/destiny2_content/icons/59732534ce7060dba681d1ba84c055a6.png" class="icon" title="Intellect" width="24" height="24"></th>
+                                   <th class="p-0" style="width: 5.55%;"><img src="https://www.bungie.net/common/destiny2_content/icons/d1c154469670e9a592c9d4cbdcae5764.png" class="icon" title="Intellect" width="24" height="24"></th>
                                    <td class="p-0" style="width: 11.1%;">{{ salesitem.intellect }}</td>
-                                   <th class="p-0" style="width: 5.55%;"><img src="http://www.bungie.net/common/destiny2_content/icons/c7eefc8abbaa586eeab79e962a79d6ad.png" class="icon" title="Strength" width="24" height="24"></th>
+                                   <th class="p-0" style="width: 5.55%;"><img src="https://www.bungie.net/common/destiny2_content/icons/ea5af04ccd6a3470a44fd7bb0f66e2f7.png" class="icon" title="Strength" width="24" height="24"></th>
                                    <td class="p-0" style="width: 11.1%;">{{ salesitem.strength }}</td>
                                 </tr>
                             </tbody>
