--- a/templates/d2tal/console.html
+++ b/templates/d2tal/console.html
@@ -2,6 +2,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.7/index.global.min.js"></script>
 <script>
+    // calendar functions
     function getEvents() {
         $.ajax({
             url: "{% url 'd2api:get_events' %}",
@@ -16,9 +17,7 @@
     function renderCalendar(data) {
         var calendarEl = document.getElementById('calendar');
         var calendar = new FullCalendar.Calendar(calendarEl, {
-            timezone: 'local',
             initialView: 'dayGridMonth',
-            editable: true,
             events: data.result
         });
         calendar.render();
