--- a/templates/d2tal/index.html
+++ b/templates/d2tal/index.html
@@ -22,7 +22,7 @@
 <!-- filter button -->
 <div class="fixed-top">
     <button type="button" class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Filter</button>
-</div>
+</div><!-- end of filter button -->
 
 <!-- filter window -->
 <div id="offcanvasWithBothOptions" class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" aria-labelledby="offcanvasWithBothOptionsLabel">
@@ -234,6 +234,7 @@
     </div>
 </div><!-- end of filter window -->
 
+<!-- container -->
 <div class="container-fluid my-5 text-center">
     <!-- main title -->
     <a href="{% url 'home' %}" class="h1 my-5 text-primary text-decoration-none">DESTINY 2 - TAKE A LOOK</a>
