--- a/templates/d2tal/console.html
+++ b/templates/d2tal/console.html
@@ -1,5 +1,6 @@
 <hr>
 
+<!-- fullcalendar -->
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.7/index.global.min.js"></script>
 <script>
     // calendar functions
@@ -26,9 +27,11 @@
     document.addEventListener('DOMContentLoaded', getEvents);
 </script>
 <div id='calendar'></div>
+<!-- end of fullcalendar -->
 
 <hr>
 
+<!-- destiny2 api -->
 <fieldset>
     <legend>Manifest</legend>
     <button onclick="getManifest();">Get Manifest</button>
@@ -119,3 +122,4 @@
         });
     }
 </script>
+<!-- end of destiny2 api -->
